# tnrminal

./: .gitignore  CMakeLists.txt  README.md  build_native.bat  build_project.bat  rules.md  test.txt  verify_phase2.bat
src/: cmd_advanced.c  cmd_data.c  cmd_extra.c  cmd_file.c  cmd_fun.c  cmd_net.c  cmd_sys.c  main.c  tnr.h  utils.c
tools/zig/doc/: langref.html
